--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -3,14 +3,16 @@ name: Docker push
 on:
   push:
     branches:
-      - 'main'
 
 env:
-  IMG_REPOSITORY : ghcr.io/nirmata/kyverno-aws-adapter
+  IMG_REPOSITORY : ghcr.io/kbeniwal/kyverno-aws-adapter
 
 jobs:
   push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
