--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
           # The target branch of a pull request or the branch/tag of a push
           # ref: ${{ github.base_ref || github.ref_name }}
       - name: Set up Go
-        uses: actions/checkout@v3
+        uses: actions/setup-go@v3
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
