--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: kyverno-aws-adapter
+      - name: Unshallow
+        run: git fetch --prune --unshallow
       - name: Clone Enterprise Kyverno
         uses: actions/checkout@v3
         with:
@@ -25,5 +27,5 @@ jobs:
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
-        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter
+        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter -v 3
         working-directory: kyverno
