--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          path: kyverno-aws-adapter
       - name: Unshallow
         run: git fetch --prune --unshallow
       - name: Clone Enterprise Kyverno
@@ -27,5 +25,6 @@ jobs:
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
-        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter -v 3
+        run: make kyverno-cli-tests
+        # run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter -v 3
         working-directory: kyverno
