--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          path: kyverno-aws-adapter
       - name: Unshallow
         run: git fetch --prune --unshallow
+        working-directory: kyverno-aws-adapter
       - name: Clone Enterprise Kyverno
         uses: actions/checkout@v3
         with:
