--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Unshallow
-        run: git fetch --prune --unshallow
+        with:
+          path: kyverno-aws-adapter
       - name: Clone Enterprise Kyverno
         uses: actions/checkout@v3
         with:
@@ -25,6 +25,6 @@ jobs:
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
-        # run: make kyverno-cli-tests
-        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter -v 3
+        run: make kyverno-cli-tests
+        # run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter
         working-directory: kyverno
