--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,6 @@ jobs:
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
-        run: make kyverno-cli-tests
-        # run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter
+        # run: make kyverno-cli-tests
+        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter
         working-directory: kyverno
