--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,5 @@ jobs:
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
-        # run: make kyverno-cli-tests
-        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter -v 3
+        run: make kyverno-cli-tests
         working-directory: kyverno
