--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,5 +24,7 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.18
+      - name: Where am I?
+        run: echo pwd
       - name: Run Kyverno CLI tests
         run: make kyverno-cli-tests
