--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,5 +27,5 @@ jobs:
       - name: Where am I?
         run: pwd
       - name: Run Kyverno CLI tests
-        run: make kyverno-cli-tests
-        working-directory: kyverno-aws-adapter
+        run: ../kyverno-aws-adapter/make kyverno-cli-tests
+        working-directory: kyverno
