--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          path: kyverno-aws-adapter
       - name: Clone Enterprise Kyverno
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
         with:
