--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,8 +20,6 @@ jobs:
         with:
           repository: nirmata/kyverno
           path: kyverno
-          # The target branch of a pull request or the branch/tag of a push
-          ref: ${{ github.base_ref || github.ref_name }}
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
@@ -29,5 +27,7 @@ jobs:
       - name: Where am I?
         run: cd .. && tree -L 3
       - name: Run Kyverno CLI tests
-        run: make kyverno-cli-tests
+        run: |
+          cd ../kyverno
+	        go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter
         working-directory: kyverno-aws-adapter
