--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,5 +25,5 @@ jobs:
         with:
           go-version: 1.18
       - name: Run Kyverno CLI tests
-        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter
+        run: go run ./cmd/cli/kubectl-kyverno test ../kyverno-aws-adapter -v 6
         working-directory: kyverno
