one test case -v 6

--- a/tests/best-practices/kyverno-test.yaml
+++ b/tests/best-practices/kyverno-test.yaml
@@ -94,7 +94,7 @@ results:
     rule: check-instance-profile-access
     resource: bad-awsacfg
     result: fail
-  #   kind: AWSAdapterConfig
+    kind: AWSAdapterConfig
   # - policy: check-public-dns
   #   rule: check-public-dns
   #   resource: good-awsacfg
